--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -173,6 +173,9 @@
 					  <source>The selected route is corrupt: \r\n No objects defined.</source>
 					  <target>Den valgte ruten er korrupt: \r\n Ingen objekter er definert.</target>
 					</trans-unit>
+					<trans-unit id="route_corrupt_missingobjects">
+						<source>The selected route is corrupt: \r\n Unable to locate all defined objects.</source>
+					</trans-unit>
 					<trans-unit id="plugin_failure1">
 					  <source>The train plugin [plugin] failed to load.</source>
 					  <target>Tog-plugin [plugin] kunne ikke laste inn.</target>
