--- a/assets/Languages/pl-PL.xlf
+++ b/assets/Languages/pl-PL.xlf
@@ -173,6 +173,9 @@
 						<source>The selected route is corrupt: \r\n No objects defined.</source>
 						<target>Wybrana trasa jest uszkodzona: \r\n Brak zdefiniowanych obiektów.</target>
 					</trans-unit>
+					<trans-unit id="route_corrupt_missingobjects">
+						<source>The selected route is corrupt: \r\n Unable to locate all defined objects.</source>
+					</trans-unit>
 					<trans-unit id="plugin_failure1">
 						<source>The train plugin [plugin] failed to load.</source>
 						<target>Wtyczka pociągu [plugin] nie załadowała się.</target>
