--- a/assets/Languages/pt-PT.xlf
+++ b/assets/Languages/pt-PT.xlf
@@ -173,6 +173,9 @@
 						<source>The selected route is corrupt: \r\n No objects defined.</source>
 						<target>A linha seleccionada está corrompida: \r\n Não estão definidos objectos.</target>
 					</trans-unit>
+					<trans-unit id="route_corrupt_missingobjects">
+						<source>The selected route is corrupt: \r\n Unable to locate all defined objects.</source>
+					</trans-unit>
 					<trans-unit id="plugin_failure1">
 						<source>The train plugin [plugin] failed to load.</source>
 						<target>Falhou o carregamento do sistema de segurança [plugin] do comboio.</target>
