Fix: Uninstallation of a package not correctly showing an error when dependancies
https://github.com/leezer3/OpenBVE/issues/551

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -687,6 +687,12 @@
 					<trans-unit id="file_generic">
 						<source>Failed to create the following file: \r \n</source>
 					</trans-unit>
+					<trans-unit id="database_newer_expected">
+						<source>The package database version appears to be a newer version than supported by this copy of OpenBVE.</source>
+					</trans-unit>
+					<trans-unit id="database_invalid_xml">
+						<source>The package database XML was invalid, and has been re-created.</source>
+					</trans-unit>
 				</group>
 				<group id="controls">
 					<trans-unit id="title">
