--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -2721,6 +2721,9 @@
 					<trans-unit id="combined">
 						<source>Combined</source>
 					</trans-unit>
+					<trans-unit id="separated_interlocked">
+						<source>Separated (Interlocked)</source>
+					</trans-unit>
 					<trans-unit id="brake_notches_error_message">
 						<source>BrakeNotches must be at least 1 if HoldBrake is set.</source>
 					</trans-unit>
@@ -3099,6 +3102,9 @@
 							</trans-unit>
 							<trans-unit id="combined">
 								<source>Combined</source>
+							</trans-unit>
+							<trans-unit id="separated_interlocked">
+								<source>Separated (Interlocked)</source>
 							</trans-unit>
 						</group>
 						<trans-unit id="power_notches">
